--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">BLETestApp</string>
+    <string name="app_name">Pedometer</string>
 
     <!-- MainActivity トースト用 -->
     <string name="ble_is_not_supported">BLE is not supported</string>
     <string name="bluetooth_is_not_supported">Bluetooth is not supported.</string>
     <string name="bluetooth_is_not_working">Bluetooth is not working.</string>
-    
+
     <!-- MainActivity メニュー用 -->
     <string name="search">Search</string>
 
@@ -19,6 +19,8 @@
     <string name="chara1_notify">Chara1(Notify) : </string>
     <string name="sec_100ms">100ms</string>
     <string name="sec_1000ms">1000ms</string>
+    <string name="map">Show Map</string>
+    <string name="start">Start</string>
 
     <!-- DeviceListActivity トースト用 -->
     <string name="unknown_device">Unknown device</string>
@@ -26,4 +28,8 @@
     <!-- DeviceListActivity メニュー用 -->
     <string name="scan">Scan</string>
     <string name="stop">Stop</string>
+    <string name="title_activity_maps">MapsActivity</string>
+
+    <!-- MapsActivity -->
+    <string name="map_id">1b9950382be7477c</string>
 </resources>
